Refractions are still broken, but I fixed an error with EPSILON being too low that was causing no end of weirdness.

--- a/gl/style.css
+++ b/gl/style.css
@@ -26,9 +26,11 @@ div#controls {
     text-align: center;
     line-height: 30px;
     min-height: 30px;
+    display: flex;
 }
 
 #fps-display {
+    /* height: 30px; */
     width: 100%;
     float: left;
     color: white;
